sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
var length=getNombreValeurs();
for(i<-0 to nbr-2){	
	if(plusPetit(i-1,i+1)==false)
           	echange(i,i+1);
           
}
}
}
